! Fixed


1.6.2.X - Not released yet
==============================
+ Ticket #1792, Show an OSD message and a status message when a favorite is
  created via the keyboard shortcut
* Ticket #734, A unicode encoding will now be used for the ini file. Old ASCII
  ini files will be automatically converted to unicode. Favorites with unicode
  filenames are now correctly handled when using an ini file
* Ticket #1733/#2029, Include subfolders when opening a folder using the command
  line or via the explorer context menu
* Ticket #2157, Show the [DXVA] indicator even when playback is paused
* Ticket #2163, Improve the "Save As" dialog: the dialog is updated more regularly and
  the units for the sizes and the speed are now automatically adapted to the values
* Reduced the maximum number of packets in the Queue, except for AVI. This will
  reduce the amount of memory consumed by the player
* Improved the 'Open directory' dialog: the checkbox will now use only one line
  when possible and the overall dialog will look better when using XP
* Updated ffmpeg
* Updated French, Turkish, Czech, Russian, Ukrainian and simplified Chinese translations
! Broken playback and picture on H.264 & MPEG2 interlaced with DXVA on
  intergrated Intel adapter
! The settings location is now changed only when applying the changes in the
  options dialog instead of immediately after changing the state of the checkbox
! Improve the "Open" dialog:
   - the "OK" button will be disabled until a file has been selected (this avoids
     an error when clicking on "OK" while no file was selected)
   - when the selected file cannot be dubbed (for example when opening an rtsp
     stream), the wrong label was grayed out
! Ticket #1182, Unable to playback MPEG2 in AVI
! Ticket #1589, Crash with "Null (uncompressed)"
! Ticket #1946, Skipping bug with EVR custom output and .webm with vsync on
! Ticket #2090, Better handling of font fallback in the MediaInfo dialog so that